# arXiv-Pulse

./: .gitignore  AGENTS.md  DEV.md  HANDOVER.md  README.md  README_CN.md  REFACTOR_HANDOVER.md  SESSION.md  SYNC_CONFIG_IMPROVEMENTS.md  TODO.md  pyproject.toml
.github/workflows/: publish.yaml
arxiv_pulse/: .ENV.TEMPLATE  __init__.py  __version__.py  arxiv_crawler.py  banner.py  cli.py  config.py  environment.py  lock.py  models.py  output_manager.py  report_generator.py  research_fields.py  search_engine.py  summarizer.py
arxiv_pulse/ai/: __init__.py  report.py  summarizer.py
arxiv_pulse/cli/: __init__.py
arxiv_pulse/constants/: __init__.py
arxiv_pulse/core/: __init__.py  config.py  database.py  lock.py
arxiv_pulse/crawler/: __init__.py  arxiv.py
arxiv_pulse/i18n/: __init__.py  en.py  zh.py
arxiv_pulse/models/: __init__.py  base.py  chat.py  collection.py  paper.py  system.py
arxiv_pulse/search/: __init__.py  engine.py
arxiv_pulse/services/: ai_client.py  category_service.py  figure_service.py  paper_service.py  translation_service.py
arxiv_pulse/utils/: __init__.py  output.py  sse.py  time.py
arxiv_pulse/web/: __init__.py  app.py  dependencies.py
arxiv_pulse/web/api/: __init__.py  cache.py  chat.py  collections.py  config.py  export.py  papers.py  stats.py  tasks.py
arxiv_pulse/web/services/: __init__.py
arxiv_pulse/web/static/: index.html
arxiv_pulse/web/static/css/: main.css
arxiv_pulse/web/static/js/components/: ChatWidget.js  CollectionDialogs.js  FieldSelectorDialog.js  PaperBasketPanel.js  PaperCard.js  SettingsDrawer.js
arxiv_pulse/web/static/js/i18n/: en.js  zh.js
arxiv_pulse/web/static/js/services/: api.js
arxiv_pulse/web/static/js/stores/: chatStore.js  collectionStore.js  configStore.js  paperStore.js  uiStore.js
arxiv_pulse/web/static/js/utils/: export.js
arxiv_pulse/web/static/libs/vue-demi/: vue-demi.js
tests/: Makefile  README.md  conftest.py  run_all.py  test_01_init.py  test_02_navigation.py  test_03_home.py  test_04_recent.py  test_05_collections.py  test_06_chat.py  test_07_settings.py  test_08_export.py  test_field_selector.py  test_navigation.py  test_ui.py
