[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-pulse"
version = "1.2.1"
authors = [
    {name = "Yang Li, OpenCode, GLM-5", email = "lyang.1915@gmail.com"},
]
description = "An intelligent arXiv literature crawler and analyzer for physics research"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "arXiv", "literature", "crawler", "physics", "materials science", "machine learning",
    "density functional theory", "force fields", "condensed matter physics"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.36",
    "openai>=1.70.0",
    "tqdm>=4.67.1",
    "markdown>=3.7",
    "click>=8.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "weasyprint>=62.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "playwright>=1.45.0",
    "types-requests>=2.32.0",
    "types-markdown>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/kYangLi/ArXiv-Pulse"
Repository = "https://github.com/kYangLi/ArXiv-Pulse.git"
Documentation = "https://github.com/kYangLi/ArXiv-Pulse#readme"

[project.scripts]
pulse = "arxiv_pulse.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["arxiv_pulse*"]

[tool.setuptools.package-data]
arxiv_pulse = ["*.txt", "*.md", ".ENV.TEMPLATE", "web/static/**/*"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["arxiv_pulse"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
